--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no, maximum-scale=1" /> 
 	<link href="css/style.css" rel="stylesheet" type="text/css"/>
 	<script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU&mode=debug" type="text/javascript"></script>
+	<script src="js/menu.js"></script>
 </head>
 <body>
 <header>
@@ -16,39 +17,47 @@
 	</div>
 </header>
 <nav>
-	<ul>
-		<li id="items">Категории
+	<ul id="mainMenu">
+		<li>Категории
 			<ul>
-				<li>Аллея</li>
-				<li>Вечный огонь</li>
-				<li>Мемориал</li>
-				<li>Монумент</li>
-				<li>Памятник</li>
-				<li>Парк</li></a>
-				<li>Площадь</li>
-				<li>Обелиск</li>
-				<li>Улица</li>
-				<li>Прочее</li>
+				<li>
+					<input type="checkbox" />
+					Аллея
+				</li>
+				<li>
+					<input type="checkbox" />
+					Вечный огонь
+				</li>
+				<li>
+					<input type="checkbox" />
+					Мемориал
+				</li>
+				<li>
+					<input type="checkbox" />
+					Памятник
+				</li>
+				<li>
+					<input type="checkbox" />
+					Обелиск
+				</li>
+				<li>
+				</li>
 			</ul>
 		</li>
-		<li id="Events">Мероприятия
+		<li>
 			<ul>
-				<li></li>
 				<li></li>
 				<li></li>
 				<li></li>
 			</ul>
 		</li>
-		<li id="About">О проекте
+		<li>
 			<ul>
-				<li></li>
-				<li></li>
-				<li></li>
 				<li></li>
 				<li></li>
 			</ul>
 		</li>
-		<li id="Search">Поиск
+		<li>
 			<ul>
 				<li></li>
 				<li></li>
@@ -68,5 +77,5 @@
 
 </footer>
 </body>
-	<script type="text/javascript" src="js/script.js"></script>
+	<script src="js/script.js"></script>
 </html>
