NAVIGATION WORKS!!! I DID IT!!!

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<label><input type="checkbox" />
 					Прочее</label>
 				</li>
-				<li>
+				<li id="filter">
 					Отфильтровать
 				</li>
 			</ul>
