--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<title>Белые журавли</title>
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no, maximum-scale=1" /> 
 	<link href="css/style.css" rel="stylesheet" type="text/css"/>
+	<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 	<script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU&mode=debug" type="text/javascript"></script>
+	<script src="js/mediator.js"></script>
 	<script src="js/menu.js"></script>
 	<script src="js/data.js"></script>
 </head>
@@ -20,47 +22,47 @@
 <nav>
 	<ul id="mainMenu" class="oops">
 		<li id="categories">Категории
-			<ul>
-				<li>
-					<label><input type="checkbox" />
-					Аллея</label>
-				</li>
-				<li>
-					<label><input type="checkbox" />
-					Вечный огонь</label>
-				</li>
-				<li>
-					<label><input type="checkbox" />
-					Мемориал</label>
-				</li>
-				<li>
-					<label><input type="checkbox" />
-					Монумент</label>
-				</li>
-				<li>
-					<label><input type="checkbox" />
-					Памятник</label>
-				</li>
-				<li>
-					<label><input type="checkbox" />
-					Парк</label>
-				</li>
-				<li>
-					<label><input type="checkbox" />
-					Площадь</label>
-				</li>
-				<li>
-					<label><input type="checkbox" />
-					Обелиск</label>
-				</li>
-				<li>
-					<label><input type="checkbox" />
-					Улица</label>
-				</li>
-				<li>
-					<label><input type="checkbox" />
-					Прочее</label>
-				</li>
+			<ul id="category">
+				<label><li>
+					<input type="checkbox" />
+					Аллея
+				</li></label>
+				<label><li>
+					<input type="checkbox" />
+					Вечный огонь
+				</li></label>
+				<label><li>
+					<input type="checkbox" />
+					Мемориал
+				</li></label>
+				<label><li>
+					<input type="checkbox" />
+					Монумент
+				</li></label>
+				<label><li>
+					<input type="checkbox" />
+					Памятник
+				</li></label>
+				<label><li>
+					<input type="checkbox" />
+					Парк
+				</li></label>
+				<label><li>
+					<input type="checkbox" />
+					Площадь
+				</li></label>
+				<label><li>
+					<input type="checkbox" />
+					Обелиск
+				</li></label>
+				<label><li>
+					<input type="checkbox" />
+					Улица
+				</li></label>
+				<label><li>
+					<input type="checkbox" />
+					Прочее
+				</li></label>
 				<li id="filter">
 					Отфильтровать
 				</li>
@@ -93,6 +95,6 @@
 </footer>
 </body>
 	<script src="js/init.js"></script>
-	<script src="js/script.js"></script>
 	<script src="js/showGallery.js"></script>
+	<script src="js/script.js"></script>
 </html>
