Just other commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU&mode=debug" type="text/javascript"></script>
 	<script src="js/mediator.js"></script>
 	<script src="js/menu.js"></script>
+	<script src="js/gallery.js"></script>
 	<script src="js/data.js"></script>
 </head>
 <body>
@@ -95,6 +96,5 @@
 </footer>
 </body>
 	<script src="js/init.js"></script>
-	<script src="js/showGallery.js"></script>
 	<script src="js/script.js"></script>
 </html>
