Gallery was completed.

--- a/index.html
+++ b/index.html
@@ -87,10 +87,21 @@
 	<div id="wsMap">
 		
 	</div>
+	<div id="gallery">
+	<div id="leftButton">
+		<img id="left" src="imgs/left.png" alt="" class="scrollButton transform">		
+	</div>
+	<div id="carousel"></div>
+	<div id="wrapper">
+		<div id="canselButton" class="canselButton transform"></div>
+	</div>
+	<div id="rightButton">
+		<img id="right" src="imgs/right.png" alt="" class="scrollButton transform">
+	</div>
+	</div>
+	</div>
 </section>
-<aside id="aside">
-
-</aside>
+<aside id="aside"></aside>
 <footer id="footer">
 
 </footer>
