--- a/index.html
+++ b/index.html
@@ -13,98 +13,167 @@
 </head>
 <body>
 <header>
-	<div id="logo">
-		
-	</div>
-	<div id="auth">
-
-	</div>
+	<div id="logo"></div>
+	<div id="auth"></div>
 </header>
 <nav>
 	<ul id="mainMenu" class="oops">
-		<li id="categories">Категории
-			<ul id="category">
-				<label><li>
-					<input type="checkbox" />
-					Аллея
-				</li></label>
-				<label><li>
-					<input type="checkbox" />
-					Вечный огонь
-				</li></label>
-				<label><li>
-					<input type="checkbox" />
-					Мемориал
-				</li></label>
-				<label><li>
-					<input type="checkbox" />
-					Монумент
-				</li></label>
-				<label><li>
-					<input type="checkbox" />
-					Памятник
-				</li></label>
-				<label><li>
-					<input type="checkbox" />
-					Парк
-				</li></label>
-				<label><li>
-					<input type="checkbox" />
-					Площадь
-				</li></label>
-				<label><li>
-					<input type="checkbox" />
-					Обелиск
-				</li></label>
-				<label><li>
-					<input type="checkbox" />
-					Улица
-				</li></label>
-				<label><li>
-					<input type="checkbox" />
-					Прочее
-				</li></label>
-				<li id="filter">
-					Отфильтровать
-				</li>
-			</ul>
+		<li id="category">Категории
 		</li>
 		<li id="actions">Мероприятия
-			<ul>
-			</ul>
 		</li>
 		<li id="about">О проекте
-			<ul>
-			</ul>
 		</li>
 		<li id="search">Поиск
-			<ul>
-			</ul>
 		</li>
 	</ul>
 </nav>
-<section id="section">
-	<div id="wsMap">
-		
+<section id="container">
+	<aside id="aside">
+		<ul id="categoryList">
+			<label><li>
+				<input type="checkbox" />
+				Аллея
+			</li></label>
+			<label><li>
+				<input type="checkbox" />
+				Вечный огонь
+			</li></label>
+			<label><li>
+				<input type="checkbox" />
+				Мемориал
+			</li></label>
+			<label><li>
+				<input type="checkbox" />
+				Монумент
+			</li></label>
+			<label><li>
+				<input type="checkbox" />
+				Памятник
+			</li></label>
+			<label><li>
+				<input type="checkbox" />
+				Парк
+			</li></label>
+			<label><li>
+				<input type="checkbox" />
+				Площадь
+			</li></label>
+			<label><li>
+				<input type="checkbox" />
+				Обелиск
+			</li></label>
+			<label><li>
+				<input type="checkbox" />
+				Улица
+			</li></label>
+			<label><li>
+				<input type="checkbox" />
+				Прочее
+			</li></label>
+			<li>
+				<div id="filter">Отфильтровать</div>			
+			</li>
+		</ul>
+		<div id="searchFilter">
+			<div id="sf_block_1" class="posabs">
+				<span>Искать в</span>
+				<label>
+				<div id="sf_block_2" class="posabs">
+					<input name="title" type="checkbox">названии
+					</label><br>
+					<label>
+					<input name="desc" type="checkbox">описании
+					</label>
+				</div>
+				<input name="text" type="textarea" class="posabs" placeholder="Введите текст">
+			</div>
+			<div id="sf_block_3" class="posabs">
+				<span>Выберите категорию</span><br>
+				<ul>
+					<label><li>
+						<input name="alley" type="checkbox" />
+						Аллея
+					</li></label>
+					<label><li>
+						<input name="eternalFlame" type="checkbox" />
+						Вечный огонь
+					</li></label>
+					<label><li>
+						<input name="memorial" type="checkbox" />
+						Мемориал
+					</li></label>
+					<label><li>
+						<input name="monument" type="checkbox" />
+						Монумент
+					</li></label>
+					<label><li>
+						<input name="record" type="checkbox" />
+						Памятник
+					</li></label>
+					<label><li>
+						<input name="square" type="checkbox" />
+						Парк
+					</li></label>
+					<label><li>
+						<input name="place" type="checkbox" />
+						Площадь
+					</li></label>
+					<label><li>
+						<input name="obelisk" type="checkbox" />
+						Обелиск
+					</li></label>
+					<label><li>
+						<input name="street" type="checkbox" />
+						Улица
+					</li></label>
+					<label><li>
+						<input name="other" type="checkbox" />
+						Прочее
+					</li></label>
+				</ul>
+			</div>
+			<div id="sf_block_4" class="posabs">			
+				<input name="" type="textarea" placeholder="Страна">
+				<input name="" type="textarea" placeholder="Область">
+				<input name="" type="textarea" placeholder="Населенный пункт"><br>
+				<input name="toSearch" type="button" value="Поиск">
+			</div>
+		</div>
+	</aside>
+	<div id="section">
+		<div id="wsMap"></div>
+		<div id="gallery">
+			<div id="leftButton">
+				<img id="left" src="imgs/left.png" alt="" class="scrollButton transform">		
+			</div>
+			<div id="carousel"></div>
+			<div id="wrapper">
+				<div id="canselButton" class="canselButton transform"></div>
+			</div>
+			<div id="rightButton">
+				<img id="right" src="imgs/right.png" alt="" class="scrollButton transform">
+			</div>
+		</div>
 	</div>
-	<div id="gallery">
-	<div id="leftButton">
-		<img id="left" src="imgs/left.png" alt="" class="scrollButton transform">		
+	<div id="actionsWindow_1" class="actionsWindow">
 	</div>
-	<div id="carousel"></div>
-	<div id="wrapper">
-		<div id="canselButton" class="canselButton transform"></div>
+	<div id="actionsWindow_2" class="actionsWindow">
+		<input type="button" value="Предложить мероприятие">
 	</div>
-	<div id="rightButton">
-		<img id="right" src="imgs/right.png" alt="" class="scrollButton transform">
+	<div id="actionsWindow_3" class="actionsWindow">
+		<div id="aw3_date" class="aw3_divs">Дата<input type="textarea"></div>
+		<div id="aw3_place" class="aw3_divs">Место<input  type="textarea"></div>
+		<div id="aw3_desc" class="aw3_divs">Описание<input type="textarea"></div>
+		<input type="button" value="Добавить">
 	</div>
+	<div id="actionsWindow_4" class="actionsWindow">
+		<input type="button" value="Предложить мероприятие">
 	</div>
+	<div id="aboutWindow">
 	</div>
 </section>
-<aside id="aside"></aside>
-<footer id="footer">
-
-</footer>
+<footer id="footer"></footer>
 </body>
 	<script src="js/init.js"></script>
 	<script src="js/script.js"></script>
